--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@master
-      path: ${{ go.module_path }}
+      working-directory: ${{ go.module-path }}
 
     - name: Get dependencies
       working-directory: ${{ go.module-path }}
